Cards are now in a grid and will fit a max 4 per row. ALso fixed alignment of the cards (margin in card.css)

--- a/frontend/bruinsplit/src/components/card.css
+++ b/frontend/bruinsplit/src/components/card.css
@@ -1,11 +1,11 @@
 .card-container{
     width: 20rem;
     justify-content: center;
+    border: 1  px solid black;
     border-radius: 1rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    margin: 2rem;
     min-height: 12rem;
     color: black;
     text-align: center;
